@@ -12,6 +12,6 @@
 #undef ENABLE_FRGBA
 #undef ENABLE_RBUF
 #undef NEW_FONT_MODEL
-#undef WITH_NEW_RENDER
+#undef NEW_RENDER
 
 
