@@ -55,6 +55,8 @@ nr_canvas_item_init (NRCanvasItem * item)
 	/* Only for reference */
 	item->canvas = NULL;
 	item->parent = NULL;
+	nr_irect_set_empty (&item->bbox);
+	item->transform = NULL;
 }
 
 static void
@@ -64,6 +66,43 @@ nr_canvas_item_destroy (GtkObject * object)
 
 	item = (NRCanvasItem *) object;
 
+	/* I am not sure, whether to allow destroying items directly - maybe one should use unparent() instead */
+	if (item->parent) {
+		if (((NRCanvasItemClass *) ((GtkObject *) item->parent)->klass)->remove_child) {
+			(* ((NRCanvasItemClass *) ((GtkObject *) item->parent)->klass)->remove_child) (item->parent, item);
+		} else {
+			/* Every container HAS TO implement ::remove_child () */
+			g_assert_not_reached ();
+		}
+	}
+
+	if (item->transform) {
+		g_free (item->transform);
+		item->transform = NULL;
+	}
+
 	if (((GtkObjectClass *) (parent_class))->destroy) (* ((GtkObjectClass *) (parent_class))->destroy) (object);
 }
+
+void
+nr_canvas_item_set_transform (NRCanvasItem * item, NRAffine * transform)
+{
+	g_return_if_fail (item != NULL);
+	g_return_if_fail (NR_IS_CANVAS_ITEM (item));
+
+	if (!transform) {
+		if (!item->transform) return;
+		g_free (item->transform);
+		item->transform = NULL;
+	} else {
+		if (!item->transform) item->transform = g_new (NRAffine, 1);
+		*item->transform = *transform;
+	}
+
+	/* fixme: ??? */
+#if 0
+	nr_item_request_update (item, NR_ITEM_TRANSFORM_CHANGED);
+#endif
+}
+
 
