@@ -1,3 +1,8 @@
+2000-12-16  Lauris Kaplinski  <lauris@helixcode.com>
+
+	* src/display/nr-canvas-group.*: Base class for canvas groups
+	* src/display/nr-primitives.*: Graphic primitives
+
 2000-12-15  Lauris Kaplinski  <lauris@helixcode.com>
 
 	* src/display/nr-canvas.*: Experimental new rendering stuff (not working)
